deploy: a998fba8aa35448172525281970d45fd00619b55

--- a/math/note03.html
+++ b/math/note03.html
@@ -853,21 +853,25 @@ In chemistry, particularly in X-ray diffraction and crystallography, complex num
 <p>Multiply the two complex numbers <span class="math notranslate nohighlight">\(z_1 = 3 + 4i\)</span> and <span class="math notranslate nohighlight">\(z_2 = 1 - 2i\)</span>.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution 1</strong> </p>
-<p>To multiply complex numbers, we use distributive property:
-$<span class="math notranslate nohighlight">\(
+<p>To multiply complex numbers, we use distributive property:</p>
+<div class="math notranslate nohighlight">
+\[
 z_1 \cdot z_2 = (3 + 4i)(1 - 2i)
-\)</span><span class="math notranslate nohighlight">\(
-Expanding:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>Expanding:</p>
+<div class="math notranslate nohighlight">
+\[
 z_1 \cdot z_2 = 3(1) + 3(-2i) + 4i(1) + 4i(-2i)
-\)</span><span class="math notranslate nohighlight">\(
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<div class="math notranslate nohighlight">
+\[
 = 3 - 6i + 4i - 8i^2
-\)</span><span class="math notranslate nohighlight">\(
-Since \)</span>i^2 = -1<span class="math notranslate nohighlight">\(:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>Since <span class="math notranslate nohighlight">\(i^2 = -1\)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 = 3 - 6i + 4i + 8 = 11 - 2i
-\)</span>$</p>
+\]</div>
 </div>
 </section>
 <section id="problem-2-find-conjugate">
@@ -887,18 +891,21 @@ z^* = -3 - 5i
 <p>Convert the complex number <span class="math notranslate nohighlight">\(z = 5e^{i\frac{\pi}{4}}\)</span> to its Cartesian form.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution 3</strong> </p>
-<p>Using Euler’s formula:
-$<span class="math notranslate nohighlight">\(
+<p>Using Euler’s formula:</p>
+<div class="math notranslate nohighlight">
+\[
 z = r(\cos\phi + i\sin\phi)
-\)</span><span class="math notranslate nohighlight">\(
-For \)</span>z = 5e^{i\frac{\pi}{4}}<span class="math notranslate nohighlight">\(, we have \)</span>r = 5<span class="math notranslate nohighlight">\( and \)</span>\phi = \frac{\pi}{4}<span class="math notranslate nohighlight">\(, so:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>For <span class="math notranslate nohighlight">\(z = 5e^{i\frac{\pi}{4}}\)</span>, we have <span class="math notranslate nohighlight">\(r = 5\)</span> and <span class="math notranslate nohighlight">\(\phi = \frac{\pi}{4}\)</span>, so:</p>
+<div class="math notranslate nohighlight">
+\[
 z = 5\left(\cos\frac{\pi}{4} + i\sin\frac{\pi}{4}\right)
-\)</span><span class="math notranslate nohighlight">\(
-Since \)</span>\cos\frac{\pi}{4} = \sin\frac{\pi}{4} = \frac{\sqrt{2}}{2}<span class="math notranslate nohighlight">\(, we get:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>Since <span class="math notranslate nohighlight">\(\cos\frac{\pi}{4} = \sin\frac{\pi}{4} = \frac{\sqrt{2}}{2}\)</span>, we get:</p>
+<div class="math notranslate nohighlight">
+\[
 z = 5\left(\frac{\sqrt{2}}{2} + i\frac{\sqrt{2}}{2}\right) = \frac{5\sqrt{2}}{2} + i\frac{5\sqrt{2}}{2}
-\)</span>$</p>
+\]</div>
 </div>
 </section>
 <section id="problem-4-division">
@@ -906,23 +913,27 @@ z = 5\left(\frac{\sqrt{2}}{2} + i\frac{\sqrt{2}}{2}\right) = \frac{5\sqrt{2}}{2}
 <p>Divide the complex numbers <span class="math notranslate nohighlight">\(z_1 = 3 + 4i\)</span> by <span class="math notranslate nohighlight">\(z_2 = 1 - 2i\)</span>.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution 4</strong> </p>
-<p>To divide complex numbers, multiply both the numerator and denominator by the conjugate of the denominator:
-$<span class="math notranslate nohighlight">\(
+<p>To divide complex numbers, multiply both the numerator and denominator by the conjugate of the denominator:</p>
+<div class="math notranslate nohighlight">
+\[
 \frac{z_1}{z_2} = \frac{3 + 4i}{1 - 2i} \times \frac{1 + 2i}{1 + 2i}
-\)</span><span class="math notranslate nohighlight">\(
-First, multiply the numerator:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>First, multiply the numerator:</p>
+<div class="math notranslate nohighlight">
+\[
 (3 + 4i)(1 + 2i) = 3(1) + 3(2i) + 4i(1) + 4i(2i) = 3 + 6i + 4i - 8 = -5 + 10i
-\)</span><span class="math notranslate nohighlight">\(
-Next, multiply the denominator:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>Next, multiply the denominator:</p>
+<div class="math notranslate nohighlight">
+\[
 (1 - 2i)(1 + 2i) = 1^2 - (2i)^2 = 1 + 4 = 5
-\)</span><span class="math notranslate nohighlight">\(
-Now, divide the result:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>Now, divide the result:</p>
+<div class="math notranslate nohighlight">
+\[
 \frac{-5 + 10i}{5} = -1 + 2i
-\)</span><span class="math notranslate nohighlight">\(
-Thus, \)</span>\frac{z_1}{z_2} = -1 + 2i$.</p>
+\]</div>
+<p>Thus, <span class="math notranslate nohighlight">\(\frac{z_1}{z_2} = -1 + 2i\)</span>.</p>
 </div>
 </section>
 <section id="problem-5-find-modulus">
@@ -930,15 +941,17 @@ Thus, \)</span>\frac{z_1}{z_2} = -1 + 2i$.</p>
 <p>Find the modulus of the complex number <span class="math notranslate nohighlight">\(z = 7 + 24i\)</span>.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution 5</strong> </p>
-<p>The modulus of a complex number <span class="math notranslate nohighlight">\(z = x + iy\)</span> is given by:
-$<span class="math notranslate nohighlight">\(
+<p>The modulus of a complex number <span class="math notranslate nohighlight">\(z = x + iy\)</span> is given by:</p>
+<div class="math notranslate nohighlight">
+\[
 |z| = \sqrt{x^2 + y^2}
-\)</span><span class="math notranslate nohighlight">\(
-For \)</span>z = 7 + 24i<span class="math notranslate nohighlight">\(, we have \)</span>x = 7<span class="math notranslate nohighlight">\( and \)</span>y = 24<span class="math notranslate nohighlight">\(:
-\)</span><span class="math notranslate nohighlight">\(
+\]</div>
+<p>For <span class="math notranslate nohighlight">\(z = 7 + 24i\)</span>, we have <span class="math notranslate nohighlight">\(x = 7\)</span> and <span class="math notranslate nohighlight">\(y = 24\)</span>:</p>
+<div class="math notranslate nohighlight">
+\[
 |z| = \sqrt{7^2 + 24^2} = \sqrt{49 + 576} = \sqrt{625} = 25
-\)</span><span class="math notranslate nohighlight">\(
-Thus, the modulus of \)</span>z$ is 25.</p>
+\]</div>
+<p>Thus, the modulus of <span class="math notranslate nohighlight">\(z\)</span> is 25.</p>
 </div>
 </section>
 <section id="problem-6-multiplication">
@@ -946,17 +959,16 @@ Thus, the modulus of \)</span>z$ is 25.</p>
 <p>Multiply the complex numbers <span class="math notranslate nohighlight">\(z_1 = 2e^{i\frac{\pi}{6}}\)</span> and <span class="math notranslate nohighlight">\(z_2 = 3e^{i\frac{\pi}{3}}\)</span>.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution 5</strong> </p>
-<p>To multiply two complex numbers in polar form, multiply their magnitudes and add their angles:
-$<span class="math notranslate nohighlight">\(
-z_1 \cdot z_2 = (2e^{i\frac{\pi}{6}})(3e^{i\frac{\pi}{3}}) = 6e^{i(\frac{\pi}{6} + \frac{\pi}{3})}
-\)</span><span class="math notranslate nohighlight">\(
-\)</span><span class="math notranslate nohighlight">\(
-= 6e^{i\frac{\pi}{2}}
-\)</span><span class="math notranslate nohighlight">\(
-Thus, the product is:
-\)</span><span class="math notranslate nohighlight">\(
+<p>To multiply two complex numbers in polar form, multiply their magnitudes and add their angles:</p>
+<div class="math notranslate nohighlight">
+\[
+z_1 \cdot z_2 = (2e^{i\frac{\pi}{6}})(3e^{i\frac{\pi}{3}}) = 6e^{i(\frac{\pi}{6} + \frac{\pi}{3})}= 6e^{i\frac{\pi}{2}}
+\]</div>
+<p>Thus, the product is:</p>
+<div class="math notranslate nohighlight">
+\[
 z_1 \cdot z_2 = 6e^{i\frac{\pi}{2}} = 6i
-\)</span>$</p>
+\]</div>
 </div>
 </section>
 <section id="problem-7-from-cartesian-to-polar">
@@ -964,24 +976,30 @@ z_1 \cdot z_2 = 6e^{i\frac{\pi}{2}} = 6i
 <p>Express the complex number <span class="math notranslate nohighlight">\(z = -4 + 4i\)</span> in polar form.</p>
 <div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution 5</strong> </p>
-<ol class="arabic simple">
-<li><p><strong>Modulus</strong>:
-$<span class="math notranslate nohighlight">\( 
-r = \sqrt{x^2 + y^2} = \sqrt{(-4)^2 + 4^2} = \sqrt{16 + 16} = \sqrt{32} = 4\sqrt{2} 
-\)</span>$</p></li>
-<li><p><strong>Argument</strong>:
-$<span class="math notranslate nohighlight">\( 
-\phi = \tan^{-1}\left(\frac{y}{x}\right) = \tan^{-1}\left(\frac{4}{-4}\right) = \tan^{-1}(-1) 
-\)</span><span class="math notranslate nohighlight">\( 
-Since \)</span>z<span class="math notranslate nohighlight">\( is in the second quadrant:
-\)</span><span class="math notranslate nohighlight">\( 
-\phi = \frac{3\pi}{4}
-\)</span>$</p></li>
+<ol class="arabic">
+<li><p><strong>Modulus</strong>:</p>
+<div class="math notranslate nohighlight">
+\[ 
+   r = \sqrt{x^2 + y^2} = \sqrt{(-4)^2 + 4^2} = \sqrt{16 + 16} = \sqrt{32} = 4\sqrt{2} 
+   \]</div>
+</li>
+<li><p><strong>Argument</strong>:</p>
+<div class="math notranslate nohighlight">
+\[ 
+   \phi = \tan^{-1}\left(\frac{y}{x}\right) = \tan^{-1}\left(\frac{4}{-4}\right) = \tan^{-1}(-1) 
+   \]</div>
+<p>Since <span class="math notranslate nohighlight">\(z\)</span> is in the second quadrant:</p>
+<div class="math notranslate nohighlight">
+\[ 
+   \phi = \frac{3\pi}{4}
+   \]</div>
+</li>
 </ol>
-<p>Thus, the polar form of <span class="math notranslate nohighlight">\(z\)</span> is:
-$<span class="math notranslate nohighlight">\( 
+<p>Thus, the polar form of <span class="math notranslate nohighlight">\(z\)</span> is:</p>
+<div class="math notranslate nohighlight">
+\[ 
 z = 4\sqrt{2}e^{i\frac{3\pi}{4}}
-\)</span>$</p>
+\]</div>
 </div>
 </section>
 </section>
