deploy: 47a8ca5dc59405a6127267b671486beabde0cdf0

--- a/math/note03.html
+++ b/math/note03.html
@@ -472,26 +472,17 @@ document.write(`
 <div class="note admonition">
 <p class="admonition-title">What you need to know</p>
 <ul class="simple">
-<li><p><strong>Complex numbers are just as ‘real’ as any other type of number!</strong>
-They are not abstract, but essential tools in mathematics and physics.</p></li>
-<li><p><strong>Complex numbers as roots of polynomial equations.</strong>
-For example, quadratic equations can have two complex roots, showcasing their relevance in solving equations.</p></li>
-<li><p><strong>Visualizing complex numbers</strong>
-Complex numbers can be represented on a 2D plane, known as the complex plane, much like vectors. The horizontal axis represents the real part, and the vertical axis represents the imaginary part.</p></li>
-<li><p><strong>The imaginary unit: <span class="math notranslate nohighlight">\(i = \sqrt{-1}\)</span></strong>
-This symbol, <span class="math notranslate nohighlight">\(i\)</span>, represents the imaginary component of a complex number, where <span class="math notranslate nohighlight">\(i^2 = -1\)</span>.</p></li>
+<li><p><strong>Complex numbers generalize oridnary 1D numbers to 2D</strong>  To descirbe complex numbers
+we need two compoenents called real and imaginary parts. Complex numbers appear naturally in quantum mechanics and are essential part of physics.</p></li>
+<li><p><strong>The imaginary unit: <span class="math notranslate nohighlight">\(i = \sqrt{-1}\)</span></strong> This symbol, <span class="math notranslate nohighlight">\(i\)</span>, represents the imaginary component of a complex number, where <span class="math notranslate nohighlight">\(i^2 = -1\)</span>.</p></li>
+<li><p><strong>Complex numbers as roots of polynomial equations.</strong>  For example, quadratic equations can have two complex roots, showcasing their relevance in solving equations.</p></li>
 <li><p><strong>Cartesian and polar representations</strong>
 Complex numbers can be expressed in Cartesian form <span class="math notranslate nohighlight">\((x + iy)\)</span> or polar form <span class="math notranslate nohighlight">\((re^{i\phi})\)</span>, where <span class="math notranslate nohighlight">\(r\)</span> is the magnitude, and <span class="math notranslate nohighlight">\(\phi\)</span> is the phase (angle).</p></li>
-<li><p><strong>Euler’s formula: A beautiful and fundamental equation</strong>
-Euler’s equation, <span class="math notranslate nohighlight">\(re^{i\phi} = r(\cos \phi + i\sin \phi)\)</span>, elegantly connects complex numbers to trigonometric functions. It’s a cornerstone in both mathematics and physics.</p></li>
-<li><p><strong>Simplifying with polar coordinates</strong>
-Euler’s equation makes it much easier to manipulate complex numbers, especially in their polar form, simplifying multiplication and division.</p></li>
+<li><p><strong>Euler’s formula: A beautiful and fundamental equation</strong> <span class="math notranslate nohighlight">\(re^{i\phi} = r(\cos \phi + i\sin \phi)\)</span>, elegantly connects complex numbers to trigonometric functions. uler’s equation makes it much easier to manipulate complex numbers, especially in their polar form, simplifying multiplication and division.</p></li>
 <li><p><strong>Rotation in the complex plane</strong>
 Multiplying by a complex number in polar form corresponds to a rotation. For instance, <span class="math notranslate nohighlight">\(re^{i\phi}\)</span> rotates a vector of length <span class="math notranslate nohighlight">\(r\)</span> counterclockwise by an angle <span class="math notranslate nohighlight">\(\phi\)</span>, while <span class="math notranslate nohighlight">\(re^{-i\phi}\)</span> rotates it clockwise by <span class="math notranslate nohighlight">\(\phi\)</span>.</p></li>
-<li><p><strong>Complex conjugate: Flipping the imaginary part</strong>
-The conjugate of a complex number <span class="math notranslate nohighlight">\(z = x + iy\)</span> is given by <span class="math notranslate nohighlight">\(z^* = x - iy\)</span>. It’s a useful operation in various calculations.</p></li>
-<li><p><strong>Multiplying by the conjugate</strong>
-When you multiply a complex number by its conjugate, <span class="math notranslate nohighlight">\(z \cdot z^*\)</span>, the result is a real number equal to the square of its distance from the origin in the complex plane: <span class="math notranslate nohighlight">\(|z|^2 = x^2 + y^2\)</span>.</p></li>
+<li><p><strong>Complex conjugate: Flipping the imaginary part</strong> The conjugate of a complex number <span class="math notranslate nohighlight">\(z = x + iy\)</span> is given by <span class="math notranslate nohighlight">\(z^* = x - iy\)</span>.</p></li>
+<li><p><strong>Multiplying by the conjugate</strong> When you multiply a complex number by its conjugate, <span class="math notranslate nohighlight">\(z \cdot z^*\)</span>, the result is a real number equal to the square of its distance from the origin in the complex plane: <span class="math notranslate nohighlight">\(|z|^2 = x^2 + y^2\)</span>.</p></li>
 </ul>
 </div>
 <section id="complex-number-living-in-2d">
