deploy: 9eb6e47ab96d99027d1cd9a9fa28ef2992208af5

--- a/math/note03.html
+++ b/math/note03.html
@@ -883,12 +883,11 @@ F({h}) = \sum_{j} f_j e^{i{h} \cdot {r_j}}
 <li><p><span class="math notranslate nohighlight">\(f_j\)</span> is the scattering factor for atom <span class="math notranslate nohighlight">\(j\)</span> (how much it scatters X-rays).</p></li>
 <li><p><span class="math notranslate nohighlight">\({r_j}\)</span> is the position of atom <span class="math notranslate nohighlight">\(j\)</span> in the unit cell.</p></li>
 </ul>
-<p>The structure factor is complex, with both real and imaginary components:</p>
-<div class="math notranslate nohighlight">
-\[
+<p>The structure factor is complex, with both real and imaginary components:
+$<span class="math notranslate nohighlight">\(
 F({h}) = |F({h})|e^{i\phi({h})}
-\]</div>
-<p>Here, <span class="math notranslate nohighlight">\(|F({h})|\)</span> represents the amplitude (related to the intensity of the diffracted wave), and <span class="math notranslate nohighlight">\(\phi({h})\)</span> is the phase.</p>
+\)</span><span class="math notranslate nohighlight">\(
+Here, \)</span>|F({h})|<span class="math notranslate nohighlight">\( represents the amplitude (related to the intensity of the diffracted wave), and \)</span>\phi({h})$ is the phase.</p>
 <p><strong>Electron Density Calculation</strong>
 Once the structure factors are known, the <strong>electron density</strong> <span class="math notranslate nohighlight">\(\rho({r})\)</span> can be calculated using the inverse Fourier transform:</p>
 <div class="math notranslate nohighlight">
