deploy: 95b080e86ae4d0157a3cf2bf379adee57be8af97

--- a/math/note03.html
+++ b/math/note03.html
@@ -637,6 +637,17 @@ Multiplying by a complex number in polar form corresponds to a rotation. For ins
 </figcaption>
 </figure>
 <div class="tip dropdown admonition">
+<p class="admonition-title"><strong>Physical analogy to rotation</strong></p>
+<ul class="simple">
+<li><p>Imagine <span class="math notranslate nohighlight">\(e^{i\phi}\)</span> as a spinning wheel where we are rotating angle <span class="math notranslate nohighlight">\(\phi\)</span></p></li>
+<li><p>velocity would be given by first derivaive with respect to <span class="math notranslate nohighlight">\(t\)</span> and is equal <span class="math notranslate nohighlight">\(ie^{i\phi}\)</span>.</p></li>
+<li><p>Mulitplicatin by i we know is rotation by 90 degree. Hence velocity is perpendicular or tangential to spinning wheel.</p></li>
+<li><p>The magnitude of the velocity is <span class="math notranslate nohighlight">\(|ie^{i\phi}|=1\)</span> hence wheel is spinning with constant velocity</p></li>
+<li><p>The velocity is always tangential to the circular motion, reflecting the nature of rotational movement in the complex plane.</p></li>
+<li><p>In summary, the complex exponential function elegantly describes both rotation and scaling in the complex plane, and its derivative gives insight into the velocity of rotation, always perpendicular to the position vector.</p></li>
+</ul>
+</div>
+<div class="tip dropdown admonition">
 <p class="admonition-title"><strong>Proof Euler’s formula</strong></p>
 <p>We will prove this by using the Taylor series expansions of the exponential function, cosine, and sine.</p>
 <p><strong>Step 1: Taylor Series Expansion of <span class="math notranslate nohighlight">\(e^x\)</span></strong></p>
