deploy: eeddd8fda704e10adc3aea654b0af2f4aa415c4c

--- a/ch02/note02.html
+++ b/ch02/note02.html
@@ -469,13 +469,11 @@ document.write(`
 <div class="note admonition">
 <p class="admonition-title">What you need to know</p>
 <ul class="simple">
-<li><p>A wave is a self-propagating disturbance in a medium. Waves carry energy, momentum, information, but not matter!</p></li>
-<li><p>The wave equation which takes a form of a partial differential equation (PDE), completely describes waves’ spatial and temporal evolution.</p></li>
-<li><p>Wave equation is linear which means that any linear combination of any two solutions is also a solution to wave equation.</p></li>
-<li><p>Hence to write down the most general solution one has to take linear combination of all possible solutions.</p></li>
-<li><p>To solve wave equation for a concrete physical system one has to specify boundary conditions: what values wave function takes on physical boundaries <span class="math notranslate nohighlight">\((x=0, x=L)\)</span>. One may also specify boundary condition with respect to time (initial condition) <span class="math notranslate nohighlight">\(t=0\)</span></p></li>
-<li><p>Solutions of wave equation for a 1D guitar string are found by separating variables, solving resulting ordinary diff equations and then by imposing boundary conditions at two ends.</p></li>
-<li><p>Solution of 1D guitar string produces infinite number of periodic solutions parameterized by an integer number <span class="math notranslate nohighlight">\(n\)</span>.</p></li>
+<li><p><strong>Wave Equation Overview:</strong> The wave equation, a partial differential equation (PDE), fully describes the spatial and temporal evolution of waves.</p></li>
+<li><p><strong>Linearity of the Wave Equation:</strong> The wave equation is linear, meaning that any linear combination of solutions is also a solution. This allows the most general solution to be expressed as a linear combination of all possible solutions.</p></li>
+<li><p><strong>Boundary and Initial Conditions:</strong> To solve the wave equation for a specific physical system, boundary conditions must be specified. These include the values the wave function takes at the physical boundaries (e.g., <span class="math notranslate nohighlight">\(x = 0\)</span> and <span class="math notranslate nohighlight">\(x = L\)</span>). Initial conditions with respect to time (e.g., at <span class="math notranslate nohighlight">\(t = 0\)</span>) may also be required.</p></li>
+<li><p><strong>Solution Method for 1D Guitar String:</strong> For a 1D guitar string, the wave equation is solved by separating variables, solving the resulting ordinary differential equations, and then applying boundary conditions at the two ends of the string.</p></li>
+<li><p><strong>Periodic Solutions:</strong> The solution for a 1D guitar string results in an infinite number of periodic solutions, which are parameterized by an integer <span class="math notranslate nohighlight">\(n\)</span>.</p></li>
 </ul>
 </div>
 <section id="classical-wave-equation">
