deploy: 708afcdaf3d52d9e287e0e4ea23e2cf27ad70f43

--- a/ch02/note02.html
+++ b/ch02/note02.html
@@ -516,7 +516,7 @@ u(0, t) = 0 \quad \text{and} \quad u(L, t) = 0
 u(x, t) = X(x) \cdot T(t)
 \]</div>
 <ul class="simple">
-<li><p><strong>Principles of superposition:</strong> The wave equation is linear, meaning there <span class="math notranslate nohighlight">\(u\)</span> terms appear with first order on both side. that means that linear combination of two solutions <span class="math notranslate nohighlight">\(c_1 u_1+c_2u_2\)</span> is also a solution. If you have <span class="math notranslate nohighlight">\(n\)</span> particular solutions than you write general solution as linear combination of n terms</p></li>
+<li><p><strong>Principle of superposition:</strong> The wave equation is linear which you can see by  <span class="math notranslate nohighlight">\(u\)</span> terms appearing with first order on both side. Linearity means that linear combination of two solutions <span class="math notranslate nohighlight">\(c_1 u_1+c_2u_2\)</span> is also a solution. If you have <span class="math notranslate nohighlight">\(n\)</span> particular solutions than you write general solution as linear combination of n terms.</p></li>
 </ul>
 </section>
 <section id="step-1-plug-the-product-of-univariate-functions-into-the-wave-equation">
@@ -567,7 +567,7 @@ u(x, t) = X(x) \cdot T(t)
 <div class="tip dropdown admonition">
 <p class="admonition-title"><strong>Solving the spatial part: when <span class="math notranslate nohighlight">\(K &gt; 0\)</span></strong></p>
 <ul>
-<li><p>If <span class="math notranslate nohighlight">\(K &gt; 0\)</span>, we specify <span class="math notranslate nohighlight">\(K = \beta^2\)</span>, where <span class="math notranslate nohighlight">\(\beta\)</span> is a constant. The general solution for <span class="math notranslate nohighlight">\(X(x)\)</span> is:</p>
+<li><p>If <span class="math notranslate nohighlight">\(K &gt; 0\)</span>, we specify <span class="math notranslate nohighlight">\(K = \beta^2\)</span>, where <span class="math notranslate nohighlight">\(\beta\)</span> is a constant. The general solution for <span class="math notranslate nohighlight">\(X(x)\)</span> is represented as linar combination of particular solutions (principle of superposition):</p>
 <div class="math notranslate nohighlight">
 \[
   X(x) = c_1 e^{\beta x} + c_2 e^{-\beta x}
