deploy: 6b9d65df6ee25c57bd5098ffe24a2f79e21ceca1

--- a/ch02/note02.html
+++ b/ch02/note02.html
@@ -726,10 +726,10 @@ T(t) = D_n \cos(\omega_n t) + E_n \sin(\omega_n t) = A_n \cos (\omega_n t + \phi
 <li><p>Boundary on the <span class="math notranslate nohighlight">\(X\)</span> edge: <span class="math notranslate nohighlight">\(X(0)=X(L)=0\)</span>.</p></li>
 <li><p>Boundary on the <span class="math notranslate nohighlight">\(Y\)</span> edge: <span class="math notranslate nohighlight">\(Y(0)=Y(L)=0\)</span>.</p></li>
 <li><p>Going through exactly the same steps as in 1D case we get full solution expressed as a linear combination of 2D normal modes.</p></li>
-<li><p><strong>The 2D normal mode is a product of two 1D modes for each coordinate.</strong> Each coordinate has its own independent wave number <span class="math notranslate nohighlight">\(k_x\)</span> and <span class="math notranslate nohighlight">\(k_y\)</span>.</p></li>
+<li><p><strong>The 2D normal mode is a product of two 1D modes for each coordinate.</strong> Each coordinate has its own independent mode number <span class="math notranslate nohighlight">\(n\)</span> and <span class="math notranslate nohighlight">\(m\)</span>.</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[ u(x,y,t) = A_{nm} cos(\omega_{nm}t+\phi_{nm}) sin \frac{n\pi x}{a} sin \frac{m\pi y}{b} \]</div>
+\[ u(x,y,t) = \sum_n \sum_m A_{nm} cos(\omega_{nm}t+\phi_{nm}) sin \frac{n\pi x}{a} sin \frac{m\pi y}{b} \]</div>
 <ul class="simple">
 <li><p>The angular frequency depends on the geometry of the domain and on two integer numbers <span class="math notranslate nohighlight">\(n\)</span> and <span class="math notranslate nohighlight">\(m\)</span>.</p></li>
 </ul>
