deploy: f7d9e9f155013c78030173c31f8c57d49ae7bbbc

--- a/ch02/note02.html
+++ b/ch02/note02.html
@@ -718,14 +718,8 @@ T(t) = D_n \cos(\omega_n t) + E_n \sin(\omega_n t) = A_n \cos (\omega_n t + \phi
 u(x, y, t) = X(x) Y(y) T(t)
 \]</div>
 <ul class="simple">
-<li><p>For the spatial components <span class="math notranslate nohighlight">\(X(x)\)</span> and <span class="math notranslate nohighlight">\(Y(y)\)</span>, there are boundary conditions that must be satisfied at the fixed edges:</p>
-<ul>
-<li><p>Boundary condition along the <span class="math notranslate nohighlight">\(X\)</span>-axis: <span class="math notranslate nohighlight">\(X(0) = X(L) = 0\)</span></p></li>
-<li><p>Boundary condition along the <span class="math notranslate nohighlight">\(Y\)</span>-axis: <span class="math notranslate nohighlight">\(Y(0) = Y(L) = 0\)</span></p></li>
-</ul>
-</li>
-<li><p>Following the same steps as in the 1D case, we arrive at a solution for the 2D membrane vibrations as a linear combination of 2D normal modes.</p></li>
-<li><p><strong>The 2D normal mode is the product of two 1D modes</strong>, one for each spatial coordinate. Each coordinate has its own independent mode number, <span class="math notranslate nohighlight">\(n\)</span> for the <span class="math notranslate nohighlight">\(x\)</span>-direction and <span class="math notranslate nohighlight">\(m\)</span> for the <span class="math notranslate nohighlight">\(y\)</span>-direction:</p></li>
+<li><p>For the spatial components <span class="math notranslate nohighlight">\(X(x)\)</span> and <span class="math notranslate nohighlight">\(Y(y)\)</span>, there are boundary conditions that must be satisfied at the fixed edges: Boundary condition along the <span class="math notranslate nohighlight">\(X\)</span>-axis: <span class="math notranslate nohighlight">\(X(0) = X(L) = 0\)</span> and Boundary condition along the <span class="math notranslate nohighlight">\(Y\)</span>-axis: <span class="math notranslate nohighlight">\(Y(0) = Y(L) = 0\)</span></p></li>
+<li><p>The 2D normal mode is the product of two 1D mode. Since dimensions are independent we get integer numbers <span class="math notranslate nohighlight">\(n\)</span> for the <span class="math notranslate nohighlight">\(x\)</span>-direction and <span class="math notranslate nohighlight">\(m\)</span> for the <span class="math notranslate nohighlight">\(y\)</span>-direction:</p></li>
 </ul>
 <div class="math notranslate nohighlight">
 \[
