deploy: 29883eb15e8c7692ad09d22a87373910133bef1d

--- a/ch03/note01.html
+++ b/ch03/note01.html
@@ -563,10 +563,9 @@ document.write(`
 \[
 \frac{\partial^2 \Psi(x,t)}{\partial x^2} = -\frac{p^2}{\hbar^2} \Psi(x,t) = -\frac{2m(E - V)}{\hbar^2} \Psi(x,t)
 \]</div>
-<p>Here, we have expressed the kinetic energy as a part of the total energy using the relation <span class="math notranslate nohighlight">\(E = \frac{p^2}{2m} + V(x)\)</span>, where <span class="math notranslate nohighlight">\(V\)</span> is the potential energy.</p>
+<p>Here, we have expressed the kinetic energy as a part of the total energy using energy conservation <span class="math notranslate nohighlight">\(E = \frac{p^2}{2m} + V(x)\)</span>, where <span class="math notranslate nohighlight">\(V\)</span> is the potential energy.</p>
 <div class="important admonition">
 <p class="admonition-title"><strong>Time-Independent Schrödinger Equation</strong></p>
-<p>This equation relates the second spatial derivative of the wave function to its total energy:</p>
 <div class="math notranslate nohighlight">
 \[
 -\frac{\hbar^2}{2m} \frac{\partial^2 \Psi}{\partial x^2} + V(x) \Psi = E \Psi
@@ -591,7 +590,7 @@ document.write(`
 <li><p>The time part <span class="math notranslate nohighlight">\(T(t)=e^{-iEt/\hbar}\)</span> yields an oscillatory solution related to the total energy.</p></li>
 <li><p>The spatial part <span class="math notranslate nohighlight">\(\psi(x)\)</span> satisfies the <strong>time-independent Schrödinger equation</strong>, which we solve to obtain stationary states.</p></li>
 </ul>
-<div class="admonition-quantum-wave-function admonition">
+<div class="important admonition">
 <p class="admonition-title"><strong>Quantum Wave function</strong></p>
 <div class="math notranslate nohighlight">
 \[\Psi(x,t) = \psi(x)\cdot e^{-iEt/\hbar}\]</div>
@@ -670,7 +669,7 @@ document.write(`
 <li><p>By writing the equation in operator notation we may begin to recognize certain terms and appreciate that Schrödinger equation, as any proper equation of motion, reflects the total energy conservation</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[i\hbar \frac{\partial }{\partial t} \Psi= \Big[-\frac{\hbar^2}{2m}\frac{\partial^2 \Psi}{\partial x^2}+V \Big]\Psi=\hat{H}\Psi\]</div>
+\[i\hbar \frac{\partial }{\partial t} \Psi= \Big[-\frac{\hbar^2}{2m}\frac{\partial^2 \Psi}{\partial x^2}+V \Big]\Psi\]</div>
 <ul class="simple">
 <li><p>The operator <span class="math notranslate nohighlight">\(\hat{H}\)</span> is called a Hamilton operator or hamiltonian. And is an analog of classical Hamiltonian  which is an expression of total energy.</p></li>
 </ul>
@@ -679,8 +678,25 @@ document.write(`
 <div class="math notranslate nohighlight">
 \[\hat{H}=\hat{K}+\hat{V}=\frac{\hbar^2}{2m}\frac{\partial^2}{\partial x^2}+V(x)\]</div>
 <p>We see that the analog of classical kinetic energy is an a second order partial differentiation operator.</p>
+<div class="admonition-time-independent-schrodinger-equation admonition">
+<p class="admonition-title"><strong>Time Independent Schrodinger equation</strong></p>
+<div class="math notranslate nohighlight">
+\[\hat{H}\psi = E\psi\]</div>
 <ul class="simple">
-<li><p>Potential energy has exactly the same appearance: It is a function of spatial coordinates, e.g <span class="math notranslate nohighlight">\(V(x)=0\)</span> (free particle) or <span class="math notranslate nohighlight">\(V(x)=kx^2\)</span> (particle trapped in harmonic well) or  <span class="math notranslate nohighlight">\(V(x)=cos(x)\)</span> (particle subject to periodic potential).</p></li>
+<li><p><strong>Hamiltonian Operator</strong>: could be 1D, 2D, 3D, can describe one to many electrons</p></li>
+<li><p><strong>Energy</strong> Described possible energy values of the quantum system.</p></li>
+</ul>
+</div>
+<div class="admonition-time-dependent-schrodinger-equation admonition">
+<p class="admonition-title"><strong>Time Dependent Schrodinger equation</strong></p>
+<div class="math notranslate nohighlight">
+\[\hat{H}\psi = i\hbar\frac{\partial \psi}{\partial t}\]</div>
+<ul class="simple">
+<li><p><strong>Energy Operator</strong>: <span class="math notranslate nohighlight">\(i\hbar\frac{\partial }{\partial t}\)</span></p></li>
+</ul>
+</div>
+<ul class="simple">
+<li><p>Note how the totential energy has exactly the same appearance: It is a function of spatial coordinates, e.g <span class="math notranslate nohighlight">\(V(x)=0\)</span> (free particle) or <span class="math notranslate nohighlight">\(V(x)=kx^2\)</span> (particle trapped in harmonic well) or  <span class="math notranslate nohighlight">\(V(x)=cos(x)\)</span> (particle subject to periodic potential).</p></li>
 </ul>
 </section>
 <section id="linearity-and-princle-of-supersposition">
