--- a/ch03/note01.html
+++ b/ch03/note01.html
@@ -631,12 +631,12 @@ document.write(`
 \[\hat{A} f =4f\]</div>
 <ul class="simple">
 <li><p>Where we say that operator <span class="math notranslate nohighlight">\(\hat{A}\)</span> acts on function <span class="math notranslate nohighlight">\(e^{2x}\)</span> to produce another function which in this case is same function multiplied by 4.</p></li>
-<li><p>In general operators can be anything in front of function f(x), here are a few more examples of operators</p>
+<li><p>In general operators can be anything in front of function <span class="math notranslate nohighlight">\(f(x)\)</span>, here are a few more examples of operators :</p>
 <ul>
 <li><p><span class="math notranslate nohighlight">\(\hat{A}f = x\)</span> multiplies function by x, e.g <span class="math notranslate nohighlight">\(\hat{A}e^{2x} = xe^{2x}\)</span></p></li>
-<li><p><span class="math notranslate nohighlight">\(\hat{A} = -i\)</span> multiplies function by -i, e.g <span class="math notranslate nohighlight">\(\hat{A}e^{2x} = -e^{2x}\)</span></p></li>
+<li><p><span class="math notranslate nohighlight">\(\hat{A} = -i\)</span> multiplies function by <span class="math notranslate nohighlight">\(-i\)</span>, e.g <span class="math notranslate nohighlight">\(\hat{A}e^{2x} = -ie^{2x}\)</span></p></li>
 <li><p><span class="math notranslate nohighlight">\(\hat{A} = \sqrt{}\)</span>, takes square root, e.g <span class="math notranslate nohighlight">\(\hat{A}e^{2x} = e^{x}\)</span></p></li>
-<li><p><span class="math notranslate nohighlight">\(\hat{A} = (d/dx +x^2)\)</span>, takes derivative then adds x^2 multiplication <span class="math notranslate nohighlight">\(\hat{A}e^{2x} = 4e^{2x}+x^2e^{2x} = (4+x^2)e^{2x}\)</span></p></li>
+<li><p><span class="math notranslate nohighlight">\(\hat{A} = (d/dx +x^2)\)</span>, takes derivative then adds <span class="math notranslate nohighlight">\(x^2\)</span> multiplication <span class="math notranslate nohighlight">\(\hat{A}e^{2x} = 4e^{2x}+x^2e^{2x} = (4+x^2)e^{2x}\)</span></p></li>
 </ul>
 </li>
 </ul>
